# zx-code

./: .gitignore  DEVLOG.md  README.md  pyproject.toml
.agent/: debug.jsonl
.agent/sessions/: agent_default_cli_local_direct_cli_20260511T171851Z_1a6f275a.jsonl  agent_default_cli_local_direct_cli_20260511T172917Z_b9b076ab.jsonl  agent_default_cli_local_direct_codectx-test.jsonl  agent_default_cli_local_direct_default.jsonl  agent_default_telegram_main-telegram-bot_direct_5376363669.jsonl  default.jsonl
.memory/: MEMORY.md
.tasks/: task-984c6659.json
.zx-code/: config.toml  config.toml.example
demo/: README.md  app.py  example.py
demo/fastapi_demo/: README.md  (+6 more)
docs/: 12-Python实战技术选型.md  README.md  ZX-code.md  phase-01-单Agent核心讲解.md
interview/: 01-项目总览与数据流.md  02-核心模块逐个击破.md  03-ClaudeCode-Codex-本项目横向对比.md  04-关键源码导读.md  05-高频面试问答.md  06-全模块清单.md  README.md
tests/: test_background_tasks.py  test_channels.py  test_code_context_file_rules.py  test_code_context_indexer.py  test_code_context_splitter.py  test_code_context_tools.py  test_config.py  test_context.py  test_delivery.py  test_gateway.py  test_heartbeat_cron.py  test_hooks.py  test_lanes.py  test_loop.py  test_main.py  test_markdown_stream.py  test_markdown_stream_live_api.py  test_mcp.py  test_memory_todo_prompt.py  test_permissions.py  test_plugins.py  test_profiles.py  test_provider_mock.py  test_recovery.py  test_resilience_runner.py  test_runtime.py  test_sessions.py  test_skill_loading.py  test_subagent.py  test_task_dag.py  test_team.py  test_tool_executor.py  test_tools.py  test_worktree.py
(+127 files in other folders)
